Minor logic updates to avoid inspection warnings.